--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "routes": [
-    { "src": "/([^/.]+)", "dest": "/$1.html" }
+  "rewrites": [
+    {
+      "source": "/([^/.]+)",
+      "destination": "/$1.html"
+    }
   ]
 }
